hover dark theme contrast fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,7 +92,7 @@
 	--accent-light: #1c0056;
 	--accent-regular: #7611a6;
 	--accent-dark: #c561f6;
-	--accent-overlay: hsla(280, 89%, 67%, 0.33);
+	--accent-overlay: hsla(280, 89%, 67%, 0.801);
 	--accent-subtle-overlay: hsla(281, 81%, 36%, 0.33);
 	--accent-text-over: var(--gray-0);
 
